# rem

./: .gitignore  CMakeLists.txt  README.md  compileGCC.sh
examples/: simple1.cpp
make/: Makefile
notes/: notes.md
src/: mat.cpp  mat.ixx  rem.cpp  rem.ixx  std.ixx  vec.cpp  vec.ixx
src/internal/: common.ixx  util.ixx
src/mat/: arithmeticoperators.ixx  bitwiseoperators.ixx  comparisonoperators.ixx  inverse.ixx  mat.ixx  transform.ixx  transform.mxx  transpose.ixx
src/vec/: algebraicoperators.ixx  arithmeticoperators.ixx  bitwiseoperators.ixx  comparisonoperators.ixx  vec.ixx
tests/: constructors.cpp  mat-arithmeticoperators.cpp  mat-bitwiseoperators.cpp  mat-comparisonoperators.cpp  mat-inverse.cpp  mat-mult.cpp  mat-transpose.cpp  mat-trasnform.cpp  simple1.cpp  vec-algebraicoperators.cpp  vec-arithmeticoperators.cpp  vec-bitwiseoperators.cpp  vec-comparisonoperators.cpp
